# java-labs

./: .gitignore  2022-03-05T17-43-11.560429700.snap  README.md  encrypted
ProximityVoiceChat/: pom.xml
lab1/: oceny.txt
lab1/release/jlink/: release
lab1/source/: commands.txt
lab10/: README.md
lab11/source/cpp/: CMakeLists.txt  library.cpp  library.h
lab12/: brians-brain.js  build.gradle  game.js  settings.gradle
lab13/sources/: README.md  build.gradle  test.properties
lab14/: build.gradle  settings.gradle
lab15/: settings.gradle
lab2/: README.md  oceny.txt  pom.xml
lab2/example-user-data/u1/: record.txt
lab2/example-user-data/u3/: record.txt
lab2/example-user-data/u4/: record.txt
lab2/source/: README.md
lab2/source/example-user-data/u2/: record.txt
lab3/: pom.xml
lab3/source/: pom.xml
lab3/src/main/java/: JSONDataParser.java  Main.java  Question.java
lab4/: pom.xml
lab4/source/: pom.xml
lab5-module/api-module/src/: module-info.java
lab5-module/client-module/src/: module-info.java
lab5-module/median-service-module/src/: module-info.java
lab5-module/std-dev-service-module/src/: module-info.java
lab6/remote-billboard/: keystore
lab6/remote-client/: keystore
lab6/remote-manager/: keystore  policy.policy  server.cert
lab7/: pom.xml
lab7_8/: pom.xml
lab9/: keystore
lab9/gui/: java.policy  keystore
lab9/gui/src/: test.txt
mc-javaplugin/: pom.xml
pl.edu.pwr.app/src/: module-info.java
pl.edu.pwr.dir_hash/src/: module-info.java
source/: commands.txt
source/pl.edu.pwr.app/src/: module-info.java
(+283 files in other folders)
